<resources>
    <string name="app_name">KCS Farbrechner</string>

    <string name="title_rezepte">1K/2K/UV Rezepte</string>
    <string name="title_t_rezepte">T Rezepte</string>
    <string name="title_farbverbrauch">Farbverbrauch</string>

    <string name="navigation_drawer_open">Öffne Navigation Drawer</string>
    <string name="navigation_drawer_close">Schließe Navigation Drawer</string>

    <string name="action_updateJSONS">Update Datenbanken</string>

    <string name="druckflaecheM2">Ergebnis Druckfläche in m²</string>
    <string name="farbmengeCM3">Ergebnis Farbmenge in cm³</string>
    <string name="farbmengeL">Ergebnis Farbmenge in Liter</string>

    <string name="vGewebe">Verwendetes Gewebe:</string>
    <string name="anzDrucke">Anzahl Drucke:</string>
    <string name="drucklaengeCM">Drucklänge in cm:</string>
    <string name="druckbreiteCM">Druckbreite in cm:</string>
    <string name="bedruckungsgrad">Bedruckungsgrad in %:</string>
    <string name="berechnen">Berechnen</string>
    <string name="dl_json">Downloade JSON Datenbank&#8230;</string>
    <string name="noDL">JSON Datenbank noch nicht heruntergeladen, bitte erneut erledigen!</string>
    <string name="load_json">Lade JSON Datenbank</string>
    <string name="load_values">Lade Daten von Datenbank</string>
    <string name="zeigeR">Zeige Rezeptur</string>
    <string name="rezeptname">Rezeptname</string>
    <string name="fail_load">Laden der JSON Datenbank fehlgeschlagen, bitte erneut versuchen!</string>
    <string name="farbe">Farbe</string>
    <string name="menge">Menge</string>
</resources>
