<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.myself5.farbrechner.Farbverbrauch">

    <TextView
        android:id="@+id/gewebetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/vGewebe"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <AutoCompleteTextView
        android:id="@+id/gewebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gewebetext"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/anzDrucketext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gewebe"
        android:layout_centerHorizontal="true"
        android:text="@string/anzDrucke"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/anzDrucke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anzDrucketext"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/drucklaengeCMtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anzDrucke"
        android:layout_centerHorizontal="true"
        android:text="@string/drucklaengeCM"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/drucklaengeCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drucklaengeCMtext"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/druckbreiteCMtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drucklaengeCM"
        android:layout_centerHorizontal="true"
        android:text="@string/druckbreiteCM"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/druckbreiteCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/druckbreiteCMtext"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/bedruckungsgradtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/druckbreiteCM"
        android:layout_centerHorizontal="true"
        android:text="@string/bedruckungsgrad"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/bedruckungsgrad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bedruckungsgradtext"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/berechnen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bedruckungsgrad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/berechnen" />

    <TextView
        android:id="@+id/druckflaecheM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/berechnen"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/druckflaecheM2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/farbmengeCM3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/druckflaecheM2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/farbmengeCM3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/farbmengeL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/farbmengeCM3"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/farbmengeL"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
